// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`override option by CLI command: valid.1.config.js 1`] = `
Object {
  "cover": "__WORKSPACE__/tests/fixtures/config/cover.png",
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "theme": Object {
        "location": "https://myTheme.example.com",
        "name": "myTheme.example.com",
        "type": "uri",
      },
      "title": "myTitle",
      "type": "text/markdown",
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "theme": Object {
        "location": "__WORKSPACE__/tests/fixtures/config/theme.css",
        "name": "theme.css",
        "type": "file",
      },
      "title": "title",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": "myLanguage",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/yuno.pdf",
    },
    Object {
      "format": "webbook",
      "path": "__WORKSPACE__/yuno",
    },
  ],
  "pressReady": true,
  "projectAuthor": "myAuthor",
  "projectTitle": "myTitle",
  "sandbox": true,
  "size": Object {
    "format": "JIS-B5",
  },
  "themeIndexes": Array [
    Object {
      "location": "https://myTheme.example.com",
      "name": "myTheme.example.com",
      "type": "uri",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "name": "theme.css",
      "type": "file",
    },
  ],
  "timeout": 42000,
  "toc": "__WORKSPACE__/tests/fixtures/config/toc.html",
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`parse vivliostyle config: valid.1.config.js 1`] = `
Object {
  "cover": "__WORKSPACE__/tests/fixtures/config/cover.png",
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "theme": Object {
        "location": "__WORKSPACE__/tests/fixtures/config/debug-theme",
        "name": "debug-theme",
        "style": "./theme.css",
        "type": "package",
      },
      "title": "title",
      "type": "text/markdown",
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "theme": Object {
        "location": "__WORKSPACE__/tests/fixtures/config/theme.css",
        "name": "theme.css",
        "type": "file",
      },
      "title": "title",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": "language",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
    },
  ],
  "pressReady": true,
  "projectAuthor": "author",
  "projectTitle": "title",
  "sandbox": true,
  "size": Object {
    "format": "size",
  },
  "themeIndexes": Array [
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/debug-theme",
      "name": "debug-theme",
      "style": "./theme.css",
      "type": "package",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "name": "theme.css",
      "type": "file",
    },
  ],
  "timeout": 1,
  "toc": "__WORKSPACE__/tests/fixtures/config/toc.html",
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`parse vivliostyle config: valid.2.config.js 1`] = `
Object {
  "cover": undefined,
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "theme": undefined,
      "title": "pkgName",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": "en",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
    },
  ],
  "pressReady": false,
  "projectAuthor": "pkgAuthor",
  "projectTitle": "pkgName",
  "sandbox": true,
  "size": undefined,
  "themeIndexes": Array [],
  "timeout": 120000,
  "toc": false,
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`parse vivliostyle config: valid.3.config.js 1`] = `
Object {
  "cover": undefined,
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": "en",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/example.pdf",
    },
  ],
  "pressReady": false,
  "projectAuthor": "pkgAuthor",
  "projectTitle": "example",
  "sandbox": true,
  "size": undefined,
  "themeIndexes": Array [],
  "timeout": 120000,
  "toc": false,
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`yields a config with single html 1`] = `
Object {
  "cover": undefined,
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/sample.html",
      "target": "__SNIP__",
      "theme": undefined,
      "title": "Miyako",
      "type": "text/html",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": "__SNIP__",
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/sample.html",
    "format": "webbook",
  },
  "language": "en",
  "manifestPath": "__SNIP__",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/output.pdf",
    },
  ],
  "pressReady": false,
  "projectAuthor": "",
  "projectTitle": "Miyako",
  "sandbox": true,
  "size": undefined,
  "themeIndexes": Array [],
  "timeout": 120000,
  "toc": false,
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`yields a config with single input and vivliostyle config 1`] = `
Object {
  "cover": "__WORKSPACE__/tests/fixtures/config/cover.png",
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/sample.md",
      "target": "__SNIP__",
      "theme": Object {
        "location": "__WORKSPACE__/tests/fixtures/config/debug-theme",
        "name": "debug-theme",
        "style": "./theme.css",
        "type": "package",
      },
      "title": "Yuno",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": "__SNIP__",
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/sample.md",
    "format": "markdown",
  },
  "language": "language",
  "manifestPath": "__SNIP__",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
    },
  ],
  "pressReady": true,
  "projectAuthor": "author",
  "projectTitle": "title",
  "sandbox": true,
  "size": Object {
    "format": "size",
  },
  "themeIndexes": Array [
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/debug-theme",
      "name": "debug-theme",
      "style": "./theme.css",
      "type": "package",
    },
  ],
  "timeout": 1,
  "toc": "__WORKSPACE__/tests/fixtures/config/toc.html",
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`yields a config with single markdown 1`] = `
Object {
  "cover": undefined,
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/sample.md",
      "target": "__SNIP__",
      "theme": undefined,
      "title": "Yuno",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableChromium": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": "__SNIP__",
  "includeAssets": Array [
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.svg",
    "**/*.gif",
    "**/*.webp",
    "**/*.apng",
    "**/*.ttf",
    "**/*.otf",
    "**/*.woff",
    "**/*.woff2",
  ],
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/sample.md",
    "format": "markdown",
  },
  "language": "en",
  "manifestPath": "__SNIP__",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/output.pdf",
    },
  ],
  "pressReady": false,
  "projectAuthor": "",
  "projectTitle": "Yuno",
  "sandbox": true,
  "size": undefined,
  "themeIndexes": Array [],
  "timeout": 120000,
  "toc": false,
  "verbose": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;
